bug-069064 title is not visible properly over the android phones - in progress

--- a/application/views/css/frontend-rtl.css
+++ b/application/views/css/frontend-rtl.css
@@ -14,6 +14,7 @@
       width: 100%; } }
 
 .home.home-index .header {
+  position: -webkit-sticky;
   position: sticky;
   top: 0; }
 
@@ -1493,6 +1494,7 @@ p {
       pointer-events: none; } }
   @media (min-width: 1199px) {
     .section-filters {
+      position: -webkit-sticky;
       position: sticky;
       top: 0; } }
   @media (min-width: 576px) {
@@ -5916,6 +5918,7 @@ body.sort-active {
 .group-secondary {
   text-align: center;
   border: 1px solid var(--color-gray-300);
+  position: -webkit-sticky;
   position: sticky;
   top: 144px; }
   @media (min-width: 1299px) {
@@ -6274,6 +6277,7 @@ body.sort-active {
 
 @media (min-width: 767px) {
   .sticky-side-panel {
+    position: -webkit-sticky;
     position: sticky;
     top: 60px;
     z-index: 1; } }
@@ -7310,6 +7314,7 @@ body.sort-active {
 
 @media (mIN-width: 1199px) {
   .blog-sidebar {
+    position: -webkit-sticky;
     position: sticky;
     top: 115px; } }
 
@@ -8110,6 +8115,7 @@ body.sort-active {
     width: 100%; } }
 
 .profile-secondary .right-panel {
+  position: -webkit-sticky;
   position: sticky;
   top: 60px; }
 
@@ -8499,6 +8505,7 @@ body.sort-active {
 .section--mission {
   background: var(--color-gray-100); }
   .section--mission .primary-content {
+    position: -webkit-sticky;
     position: sticky;
     top: 140px; }
 
